<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>air_defense_sim</name>
  <version>1.0.0</version>
  <description>3D LiDAR 방공 시뮬레이션 - Gazebo + ROS2 + Unity</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <exec_depend>sensor_msgs_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
